--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "left-pad": "^1.3.0",
     "mini-css-extract-plugin": "0.5.0",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -62,15 +63,17 @@
     "urijs": "^1.19.1",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
-  "proxy": "http://localhost:5555",
+  "proxy": "http://39.96.69.24",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "format": "eslint src/**/*.{js,jsx} --fix"
   },
   "eslintConfig": {
     "extends": "react-app",
